syntax = "proto3";

package protocol;

message Point {
  double x = 1;
  double y = 2;
}

enum BulletType {
  Normal = 0;
  Lock = 1;
  Dragon = 2;
  DragonOther = 3;
  Phoenix = 4;
  Drill = 5;
  Laser = 6;
  Fire = 7;
  Free = 20;
  FreeDrill = 21;
  FreeNet = 22;
  Energy = 23;
  FreeSpin = 24;
}

message ShootReq {
  float bet = 1;
  Point point = 2;
  BulletType type = 3;
  uint32 fishId = 4;
  uint32 bulletId = 5;
}

message ShootNotify {
  ShootReq data = 1;
  uint32 seat = 2;
  float coin = 3;
  float remain = 4;
}
