syntax = "proto3";

package protocol;

message LoginRequest {
  string token = 1;
  int32 game = 2;
}
